# KVRC2021

./: .gitmodules  README.md
khnp_competition/: CMakeLists.txt  package.xml
khnp_competition/include/: courseA.h  mainA.h
khnp_competition/launch/: main.launch  qt_only.launch
khnp_competition/scripts/: mason_test_code.py  spawning.py  temp_control_arm.py  tf_broadcaster.py
khnp_competition/src/: mainA.cpp
pipebot_config/: CMakeLists.txt  config.json  package.xml
pipebot_config/config/gait/: gait.yaml
pipebot_config/config/joints/: joints.yaml
pipebot_config/config/links/: links.yaml
pipebot_config/config/ros_control/: ros_control.yaml
pipebot_config/include/: gait_config.h  quadruped_description.h
pipebot_config/launch/: bringup.launch  gazebo.launch
pipebot_config/meshes/: ARM_1_1.stl  ARM_2_1.stl  ARM_3_1.stl  ARM_4_1.stl  ARM_5_1.stl  ARM_6_1.stl  BL_calf_1.stl  BL_foot_1.stl  BL_hip_2.stl  BL_thigh_1.stl  BR_calf_1.stl  BR_foot_4.stl  BR_hip_1.stl  BR_thigh_1.stl  FL_calf_1.stl  FL_foot_1.stl  FL_hip_1.stl  FL_thigh_1.stl  FR_calf_2.stl  FR_foot_1.stl  FR_hip_1.stl  FR_thigh_2.stl
pipebot_config/urdf/: pipebot.urdf
pipebot_config/urdf/not_used/: materials.xacro  pipebot.gazebo  pipebot.trans  pipebot.xacro
